# legos.generic

./: .bandit  .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg
chatbot/: example-chatbot.py  example-config.yaml
legos/: __init__.py  generic.py  schema.yaml
tests/: config.yaml  responses.json  responses.yaml  test_generic.py
