[metadata]
name = legos.generic
version = 0.0.1
url = https://github.com/_
author = Drew Pearce
description = Some Description
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
install_requires =
    legobot==1.2.4
    pyyaml
namespace_packages =
    legos
packages =
    legos
include_package_data = True