[metadata]
name = legos.generic
version = 0.0.3
url = https://github.com/Legobot/legos.generic
author = Drew Pearce
description = Generic, config-driven lego for Legobot
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[options]
install_requires =
    legobot>=1.2.5
    pyyaml
    jsonschema==2.6.0
namespace_packages =
    legos
packages =
    legos
include_package_data = True
